feat: column layout

--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="jumbotron vertical-center">
-    <div class="col-sm-4">
+    <div class="col-sm-2">
     </div>
     <div class="col-sm-4 container">
         <div id="config" class="well">
@@ -30,12 +30,14 @@
                 <input type="text" name="teacher" class="form-control"/>
             </div>
         </div>
-        <button id="more-classes" class="btn btn-default">Plus</button>
-        <button id="generate-grid" class="btn btn-default">Generate</button>
-        <div id="grids">
+        <div>
+            <button id="more-classes" class="btn btn-default">Plus</button>
+            <button id="generate-grid" class="btn btn-default">Generate</button>
         </div>
     </div>
-    <div class="col-sm-4">
+    <div id="grids" class="col-sm-4">
+    </div>
+    <div class="col-sm-2">
     </div>
 </div>
 </body>
